--- a/School.UI/Views/Shared/_Layout.cshtml
+++ b/School.UI/Views/Shared/_Layout.cshtml
@@ -459,6 +459,7 @@
         if (string.indexOf(substring) > -1) {
             alert('Script Error: See Browser Console for Detail');
         } else {
+            debugger;
             var message = [
                 'Message: ' + msg,
                 'URL: ' + url,
