--- a/School.UI/Views/Student/_ViewStudentInfor.cshtml
+++ b/School.UI/Views/Student/_ViewStudentInfor.cshtml
@@ -186,8 +186,9 @@
 
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input id="btnEdit" type="submit" value="Edit" class="btn btn-warning" onclick='return validateInput()' />
-                        <button type="button" id="btnSave" class="btn btn-primary btnWidth" onclick="closepopup(this)">Save</button>
+                        @*<input id="btnEdit" type="submit" value="Edit" class="btn btn-warning btnWidth" onclick='return validateInput()' />*@
+                        <button type="button" id="btnUpdate" class="btn btn-primary btnWidth hidden" onclick="closepopup(this)">Update</button>
+                        <button type="button" id="btnDeleteUsr" class="btn btn-warning btnWidth hidden" onclick="closepopup(this)">Delete</button>
                     </div>
                 </div>
             </div>
@@ -198,6 +199,17 @@
 <script>
 
     $(document).ready(function () {
+
+        var emp = new registeredUserToDo("delete");
+        var _empReq = emp.toDoRequest();
+
+        if (emp.toDoRequest().name ==="edit") {
+            $('#btnUpdate').removeClass("hidden").css("display", "block").show();
+        }
+        else if (emp.toDoRequest().name === "delete") {
+            $('#btnDeleteUsr').removeClass("hidden").css("display", "block").show();
+        }
+
         $("#uploaFile").change(function () {
             //$(".div_loadPic , .btn_SavePic").show();
             var File = this.files;
@@ -274,13 +286,6 @@
         autoclose: true,
     });
 
-
-    function clearInputs() {
-        $('#SubjectId').val("");
-        $('#SubjectName').val("");
-    }
-
-
     $("#register-page #gradeId,#register-page #provinceId,#register-page #suburbId").change(function (event) {
         event.preventDefault();
         event.stopPropagation();
@@ -323,8 +328,6 @@
         classControllerHelper.callController(pageObj);
     });
 
-
-
     $("#register-page #GradeId").change(function (event) {
         event.preventDefault();
         event.stopPropagation();
@@ -342,100 +345,3 @@
         classControllerHelper.callController(pageObj);
     });
 </script>
-
-
-<script>
-
-    function myInit() {
-
-     document.addEventListener('DomContentLooaded', myInit);
-
-    let btn = document.getElementById('btn');
-    let lnk = document.getElementById('link');
-    let txt = document.getElementById('txt');
-
-    txt.addEventListener('input', function (event) {
-        var _type = event.type;
-        var _target = event.target;
-        var _value = event.target.value;
-    });
-    txt.addEventListener('change', function (event) {
-        var _type = event.type;
-        var _target = event.target;
-        var _value = event.target.value;
-    });
-    txt.addEventListener('blur', function (event) {
-    var _type = event.type;
-    var _target = event.target;
-    var _value = event.target.value;
-    });
-
-    }
-
-</script>
-
-
-@*
-    <script>
-        $(document).ready(function () {
-
-            $("#demoGrid").DataTable({
-
-                "processing": true, // for show progress bar
-                "serverSide": true, // for process server side
-                "filter": true, // this is for disable filter (search box)
-                "orderMulti": false, // for disable multiple column at once
-                "pageLength": 5,
-
-                "ajax": {
-                    "url": "/Demo/LoadData",
-                    "type": "POST",
-                    "datatype": "json"
-                },
-
-                "columnDefs":
-                    [{
-                        "targets": [0],
-                        "visible": false,
-                        "searchable": false
-                    },
-                    {
-                        "targets": [7],
-                        "searchable": false,
-                        "orderable": false
-                    },
-                    {
-                        "targets": [8],
-                        "searchable": false,
-                        "orderable": false
-                    },
-                    {
-                        "targets": [9],
-                        "searchable": false,
-                        "orderable": false
-                    }],
-
-                "columns": [
-                    { "data": "CustomerID", "name": "CustomerID", "autoWidth": true },
-                    { "data": "CompanyName", "name": "CompanyName", "autoWidth": true },
-                    { "data": "ContactName", "title": "ContactName", "name": "ContactName", "autoWidth": true },
-                    { "data": "ContactTitle", "name": "ContactTitle", "autoWidth": true },
-                    { "data": "City", "name": "City", "autoWidth": true },
-                    { "data": "PostalCode", "name": "PostalCode", "autoWidth": true },
-                    { "data": "Country", "name": "Country", "autoWidth": true },
-                    { "data": "Phone", "name": "Phone", "title": "Status", "autoWidth": true },
-                    {
-                        "render": function (data, type, full, meta) { return '<a class="btn btn-info" href="/Demo/Edit/' + full.CustomerID + '">Edit</a>'; }
-                    },
-                    {
-                        data: null, render: function (data, type, row) {
-                            return "<a href='#' class='btn btn-danger' onclick=DeleteData('" + row.CustomerID + "'); >Delete</a>";
-                        }
-                    },
-
-                ]
-
-            });
-        });
-    </script>
-*@
