--- a/School.UI/Views/Shared/_Layout.cshtml
+++ b/School.UI/Views/Shared/_Layout.cshtml
@@ -165,6 +165,14 @@
             bottom: 0px;
             background-color: rgb(214, 219, 233);
         }
+
+        .btnWidth {
+            min-width: 120px;
+        }
+
+        input[type=text], input[type=button], input[type=label] {
+            font-size: 12px;
+        }
     </style>
 
     <style>
