--- a/School.UI/Views/Shared/_Layout.cshtml
+++ b/School.UI/Views/Shared/_Layout.cshtml
@@ -167,12 +167,21 @@
         }
 
         .btnWidth {
-            min-width: 120px;
+            min-width: 110px;
         }
 
-        input[type=text], input[type=button], input[type=label] {
+        input[type=text], input[type=button], input[type=label], label {
+            font-family: Verdana, Arial, Helvetica, sans-serif;
             font-size: 12px;
+            font-weight: normal !important;
         }
+
+        .control-label {
+            font-family: Verdana, Arial, Helvetica, sans-serif;
+            font-size: 12px;
+            font-weight: normal !important;
+        }
+
     </style>
 
     <style>
