--- a/School.UI/Views/LogIn/_LoginPage.cshtml
+++ b/School.UI/Views/LogIn/_LoginPage.cshtml
@@ -32,8 +32,8 @@
           @Html.TextBoxFor(m => m.Password, new { @class = "form-control",Type="Password" })           
         </div>
         <div class="form-group" style="padding-left:10px;padding-right:10px;">
-            <button type="submit" class="btn btn-success btnWidth btnlogColor">Sign In</button>
-            <button type="button" id="btnClose" class="btn btn-danger btnWidth btnlogColor" >Close</button>
+            <button type="submit" class="btn btn-success btnlogColor">Sign In</button>
+            <button type="button" id="btnClose" class="btn btn-danger btnlogColor" >Close</button>
             <hr />
             <a href="#" style="color:blue;"><i class="fa fa-key"></i> I forgot my password </a>
         </div>
