--- a/School.UI/Views/Shared/_LayoutRightHeader.cshtml
+++ b/School.UI/Views/Shared/_LayoutRightHeader.cshtml
@@ -77,7 +77,8 @@
         width: 62px;
         transform: skew(-15deg);
         padding-left: 1px;
-        color: orange;
+        /*color: orange;*/
+        color: wheat;
     }
 
     .register-label {
@@ -91,7 +92,7 @@
         /*color:darkgreen;*/
     }
     .logOff {
-        color: orangered;
+        color: darkred;
     }
 
         .loIng-label:hover, .register-label:hover {
@@ -134,6 +135,86 @@
         .layout-OnOff-icon:hover {
             cursor: pointer;
         }
+
+
+
+
+    .default-menu ul {
+        list-style: none;
+        list-style-type: none;
+        margin-top: 10px;
+        top: 0px;
+        width: calc(100%-300px);
+        border: 0px solid red;
+        height: 30px;
+    }
+
+        .default-menu ul li {
+            list-style: none;
+            list-style-type: none;
+            display: inline;
+            float: left;
+            padding-left: 35px;
+            padding-right: 35px;
+            border: 0px solid rgb(131, 25, 16);
+            height: 30px;
+        }
+
+
+
+    .menu-item a {
+        list-style: none;
+        list-style-type: none;
+        text-decoration: none;
+        position: relative;
+    }
+
+    a {
+        display: block;
+        position: relative;
+        padding: 2px 0;
+    }
+
+        a::after {
+            content: '';
+            position: absolute;
+            bottom: 0px;
+            left: 0;
+            width: 100%;
+            height: 2px;
+            background-color: rgb(131, 25, 16);
+            opacity: 0;
+            transition: opacity 300ms, transform 300ms;
+        }
+
+        a:hover::after,
+        a:focus::after {
+            opacity: 1;
+            transform: translate3d(0, 6px, 0);
+        }
+
+
+    .default-menu {
+        left:45px;
+        width: calc(100% - 224px);
+        position:absolute;
+     
+    }
+    .default-menu a {
+        list-style: none;
+        list-style-type: none;
+        text-decoration: none;
+        position: relative;
+    }
+
+    a {
+        display: block;
+        position: relative;
+        padding: 2px 0;
+    }
+
+
+
 
     .txtSearchBig {
         /*height: 26px;*/
@@ -179,11 +260,49 @@
 
         <div class="layoutRight-header-bottom col-xs-12" style="border:0px solid red;z-index:1000;">
 
-            <div class="layout-OnOff-div">
-                <p id="layout-OnOff-icon" class="layout-OnOff-icon fa fa-bars" style="font:20px;color:orange"></p>
+            <div class="layout-OnOff-div" style="border:0px solid red;">
+                <p id="layout-OnOff-icon" class="layout-OnOff-icon fa fa-bars" style="font:20px;color:wheat"></p>
             </div>
 
-            <div id="holder-logIn" class="layout-loginCo">
+
+            <div  class="default-menu rm-pd" style="border:0px solid green;">
+                <ul class="menu rm-pd col-xs-12" style="border:0px solid green;padding:0;">
+                    <li class="menu-item">
+                        <a href="#">
+                            <span class="menu-name" style="color:blue;">Home</span>
+                        </a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="#">
+                            <span class="menu-name">Courses</span>
+                        </a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="#">
+                            <span class="menu-name">Gallery</span>
+                        </a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="#">
+                            <span class="menu-name">Blog</span>
+                        </a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="#">
+                            <span class="menu-name">About</span>
+                        </a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="#">
+                            <span class="menu-name">Contact</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
+
+
+            <div id="holder-logIn" class="layout-loginCo" style="border:0px solid red;">
 
                 <div id="divloginCanvas" class="loginCanvas" style="margin-top:-6px;margin-left:-4px;float:left;border:1px solid rgb(82, 109, 129);border-radius:50%;">
                 </div>
