--- a/School.UI/Views/Home/Index.cshtml
+++ b/School.UI/Views/Home/Index.cshtml
@@ -539,16 +539,21 @@
         top: 60px;
         color: white;
         width: 500px;
-        height: 60px;
+        height: 50px;
         left: 5px;
         opacity: 1;
         font-size: 30px;
-        line-height: 60px;
+        line-height: 50px;
     }
 
         #Home-Container .div-advert span {
-            height: 60px;
+            height: 50px;
             background-color: orange;
+            display: inline-block;
+            padding-top: 2px;
+            margin-top: 2px;
+            padding-left: 5px;
+            padding-right: 5px;
         }
 
 
@@ -570,6 +575,7 @@
                     <span>BRINGING THE POVERTY DOWN</span>
                     <span>I SEE BRIGHT FAETURE IN YOU</span>
                     <span>HANG IN THERE</span>
+                   @* <span style="font-size:16px; color:orange;background-color:transparent;">HANG IN THERE</span>*@
                 </div>
 
             </div>
