--- a/School.UI/Views/Shared/_Layout.cshtml
+++ b/School.UI/Views/Shared/_Layout.cshtml
@@ -136,12 +136,13 @@
             position: absolute;
             box-shadow: 1px 1px 41px 1px silver;
             border-color: wheat;
-            background-color: rgb(59, 90, 108);
+            /*background-color: rgb(59, 90, 108);*/
+            background-color:rgb(173, 128, 73);
             border-radius: 20px;
             max-width: 110px;
             min-width: 110px;
             /*top: 30px;*/
-            top: 5px;
+            top: 8px;
             left: 70px;
             text-align: center;
             line-height: 30px;
