--- a/School.UI/Views/Classes - Copy/_AddClass.cshtml
+++ b/School.UI/Views/Classes - Copy/_AddClass.cshtml
@@ -84,8 +84,8 @@
                 ClassName: $('#ClassName').val()
             };
 
-            var header = 'Update Class';
-            var url = '/Classes/SaveRecord';
+            var header = 'Update Subject';
+            var url = '/Subject/SaveRecord';
             var objPopup = classPageConstant.popupChildOne;
             var pageObj = {
                 function: "message", url: url, type: "Post", data: data, header: header, pageId: "", objPopup: {}
