--- a/School.UI/Views/GradeClass/_UpdateGradeClass.cshtml
+++ b/School.UI/Views/GradeClass/_UpdateGradeClass.cshtml
@@ -63,9 +63,14 @@
         }
     }
 
+
     function OnFailure(response) {
+        var msgObj = { message: response.message, type: response.type, title: response.title, pageId: "" };
+        classMessageResponse.showMessage(msgObj);
     };
     function OnSuccess(response) {
+        var msgObj = { message: response.message, type: response.type, title: response.title, pageId: "" };
+        classMessageResponse.showMessage(msgObj);
     };
 
 </script>
