--- a/School.UI/Views/Classes/_TableClass.cshtml
+++ b/School.UI/Views/Classes/_TableClass.cshtml
@@ -1,70 +1,91 @@
 ﻿@model IEnumerable<School.Entities.Fields.Classes>
 
-@{
-    string test = "test";
-}
-<div class="myContainer col-lg-offset-10 col-xs-2 rm-pd ">
-    <input class="tablink active" id="btnAddNewRecord" type="button" value="Add New Record" style="width:130px;margin-top:5px;margin-bottom:5px;border-right:1px solid orange;" />
-</div>
+<style>
 
-<table id="tableId" class="table" style="border:1px solid silver;">
-    <thead style="background-color:rgb(240, 240, 240);">
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.ClassId)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ClassName)
-            </th>
-            <th>
-                Edit
-            </th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ClassId)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ClassName)
-                </td>
-                <td>
-                    <button id="btnRowEdit" type="button" class="btnRowEdit btn btn-primary">Edit</button>
-                </td>
-            </tr>
+    .card_t {
+        border-radius: 2px;
+        display: inline-block;
+        min-height: 100px;
+        margin: 1rem;
+        position: relative;
+        width: calc(100% - 20px);
+        padding-top: 5px;
+    }
+
+    .card-s {
+        box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+        transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+    }
+
+        .card-s:hover {
+            box-shadow: 0 2px 4px rgba(0,0,0,0.25), 0 2px 2px rgba(0,0,0,0.22);
         }
-    </tbody>
-</table>
+</style>
 
+<div class="col-md-12" style="border: 0px solid white; display: inline-block;">
+    <div class="card_t card-s">
+        <div style="padding:15px;">
+
+            <table id="tableId" class="table" style="border:1px solid silver;">
+                <thead style="background-color:rgb(240, 240, 240);">
+                    <tr>
+                        <th>
+                            @Html.DisplayNameFor(model => model.ClassId)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.ClassName)
+                        </th>
+                        <th>
+                            Edit
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.ClassId)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.ClassName)
+                            </td>
+                            <td>
+                                <button id="btnRowEdit" type="button" class="btnRowEdit btn btn-primary">Edit</button>
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
 
 <script>
 
-    $('#btnAddNewRecord').click(function (event) {
+    //$('#btnAddNewRecord').click(function (event) {
+    //    event.preventDefault();
+    //    event.stopPropagation();
+    //    //debugger;
+    //    var data = {
+    //        'SubjectId': "",
+    //        'SubjectName': ""
+    //    };
+
+    //    var header = 'Add New Record';
+    //    var url = '/Classes/AddRecord';
+
+    //    var objPopup = classPageConstant.popupChildOne;
+    //    var pageObj = { function: "popup", url: url, type: "Post", data: data, header: header, pageId: "", objPopup: objPopup };
+    //    classControllerHelper.callController(pageObj);
+
+    //});
+
+
+    $('#tableId #btnRowEdit').click(function (event) {
         event.preventDefault();
         event.stopPropagation();
-        //debugger;
-        var data = {
-            'SubjectId':"",
-            'SubjectName': ""
-        };
-
-        var header = 'Add New Record';
-        var url = '/Classes/AddRecord';
-
-        var objPopup = classPageConstant.popupChildOne;
-        var pageObj = { function: "popup", url: url, type: "Post", data: data, header: header, pageId: "", objPopup: objPopup };
-        classControllerHelper.callController(pageObj);
-
-    });
-
-
-    $('#btnRowEdit').click(function (event) {
-        event.preventDefault();
-        event.stopPropagation();
-
+        debugger;
         var ClassId = $(this).closest('td').parent('tr').find("td:eq(0)").text().trim();
         var ClassName = $(this).closest('td').parent('tr').find("td:eq(1)").text().trim();
 
